<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/player_a_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:clickable="false"
            app:backgroundTint="#FF0000"
            android:contentDescription="@string/red_green"
            tools:ignore="NestedWeights" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:clickable="false"
            android:contentDescription="@string/red_green"
            app:backgroundTint="#FF0000" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="0dp"
            android:contentDescription="@string/red_green"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:clickable="false"
            app:backgroundTint="#FF0000" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="0dp"
            android:contentDescription="@string/red_green"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:clickable="false"
            app:backgroundTint="#FF0000" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="0dp"
            android:contentDescription="@string/red_green"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:clickable="false"
            app:backgroundTint="#FF0000" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="0dp"
            android:contentDescription="@string/red_green"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:clickable="false"
            app:backgroundTint="#FF0000" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="0dp"
            android:contentDescription="@string/red_green"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:clickable="false"
            app:backgroundTint="#FF0000" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="0dp"
            android:contentDescription="@string/red_green"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:clickable="false"
            app:backgroundTint="#FF0000" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="0dp"
            android:contentDescription="@string/red_green"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:clickable="false"
            app:backgroundTint="#FF0000" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="0dp"
            android:contentDescription="@string/red_green"

            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:clickable="false"
            app:backgroundTint="#FF0000" />

        <TextView
            android:id="@+id/player_a_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:text="@string/_0"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="4dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:onClick="addOneForPlayerA"
            android:text="@string/a_scores"
            android:layout_marginEnd="8dp"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

        <Button
            style="@style/Widget.AppCompat.ButtonBar"
            android:id="@+id/penalty_score_A"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:onClick="scoreForPenalty"
            android:text="@string/penalty_shot"
            android:layout_marginStart="8dp"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20">

        <ImageView
            android:contentDescription="@string/foosball_table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/table_soccer" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:onClick="addOneForPlayerB"
            android:text="@string/b_scores"
            android:layout_marginEnd="8dp"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

        <Button
            style="@style/Widget.AppCompat.ButtonBar"
            android:id="@+id/penalty_score_B"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:onClick="scoreForPenalty"
            android:text="@string/penalty_shot"
            android:layout_marginStart="8dp"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/player_b_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:contentDescription="@string/red_green"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:clickable="false"
            app:backgroundTint="#FF0000"
            tools:ignore="NestedWeights" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:contentDescription="@string/red_green"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:clickable="false"
            app:backgroundTint="#FF0000" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="0dp"
            android:contentDescription="@string/red_green"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:clickable="false"
            app:backgroundTint="#FF0000" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="0dp"
            android:contentDescription="@string/red_green"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:clickable="false"
            app:backgroundTint="#FF0000" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="0dp"
            android:contentDescription="@string/red_green"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:clickable="false"
            app:backgroundTint="#FF0000" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="0dp"
            android:contentDescription="@string/red_green"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:clickable="false"
            app:backgroundTint="#FF0000" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="0dp"
            android:contentDescription="@string/red_green"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:clickable="false"
            app:backgroundTint="#FF0000" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="0dp"
            android:contentDescription="@string/red_green"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:clickable="false"
            app:backgroundTint="#FF0000" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="0dp"
            android:contentDescription="@string/red_green"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:clickable="false"
            app:backgroundTint="#FF0000" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="0dp"
            android:contentDescription="@string/red_green"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:clickable="false"
            app:backgroundTint="#FF0000" />

        <TextView
            android:id="@+id/player_b_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:text="@string/_0"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="4dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:onClick="reset"
            android:text="@string/reset"
            tools:ignore="UsingOnClickInXml" />
    </RelativeLayout>

</LinearLayout>